--- a/wiki-page.html
+++ b/wiki-page.html
@@ -10,7 +10,7 @@
    Of the land carnivorans, it is rivaled in size only by its closest relative, the polar bear, which is much less variable in size and slightly bigger on average.</p>
    <a href="https://en.wikipedia.org/wiki/Brown_bear"> Learn More </a>
    Here are some bear species:
-   <ul> <li>Arctos</li> <li> Collarus</li> <li> Horribilis</li> <li> Nelsoni(extint) </li> </ul>
+   <ul style= "color: green;"> <li>Arctos</li> <li> Collarus</li> <li> Horribilis</li> <li> Nelsoni(extint) </li> </ul>
    The following countires have the largest populations of brown bears:
    <ol> <li> Russia</li> <li> United states</li> <li> Canada</li> </ol>
 
