changed list font size

--- a/wiki-page.html
+++ b/wiki-page.html
@@ -12,7 +12,7 @@
    Here are some bear species:
    <ul style= "color: green;"> <li>Arctos</li> <li> Collarus</li> <li> Horribilis</li> <li> Nelsoni(extint) </li> </ul>
    The following countires have the largest populations of brown bears:
-   <ol> <li> Russia</li> <li> United states</li> <li> Canada</li> </ol>
+   <ol style="font-size:20px"> <li> Russia</li> <li> United states</li> <li> Canada</li> </ol>
 
    <img src="/bear.jpg">
   </body>
