--- a/wiki-page.html
+++ b/wiki-page.html
@@ -8,6 +8,7 @@
    <h2> what is the brown bear</h2>
    <p style= "text-align: center">The brown bear (Ursus arctos) is a large bear native to Eurasia and North America.
    Of the land carnivorans, it is rivaled in size only by its closest relative, the polar bear, which is much less variable in size and slightly bigger on average.</p>
+   <p> bears are interesting creatures</p>
    <a href="https://en.wikipedia.org/wiki/Brown_bear"> Learn More </a>
    Here are some bear species:
    <ul style= "color: green;"> <li>Arctos</li> <li> Collarus</li> <li> Horribilis</li> <li> Nelsoni(extint) </li> </ul>
